Added header styling.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="css/template.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Geolingo</h1>
-    <h4>Alphabet</h4>
-    <h4>Words</h4>
-    <h4>Forum</h4>
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to Geolingo!</h1>
+      <button><a href="index.html">Home</a></button>
+      <button><a href="html/alphabet.html">Alphabet</a></button>
+      <button><a href="html/words.html">Words</a></button>
+      <button><a href="html/forum.html">Forum</a></button>
+    </header>
+    <main>
+      <h3>News</h3>
+    </main>
+    <footer><h6>Copyright ©Wojciech Miczarek</h6></footer>
+  </body>
 </html>
