Created dummy design for alphabet learning page as well as box-shadow for all sites.

--- a/html/alphabet.html
+++ b/html/alphabet.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="../css/template.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="../css/template.css" />
+    <link rel="stylesheet" href="../css/alphabet.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Learn Georgian letters</h1>
-        <button><a href="../index.html">Home</a></button>
-        <button><a href="alphabet.html">Alphabet</a></button>
-        <button><a href="words.html">Words</a></button>
-        <button><a href="forum.html">Forum</a></button>
+      <h1>Learn Georgian letters</h1>
+      <button><a href="../index.html">Home</a></button>
+      <button><a href="alphabet.html">Alphabet</a></button>
+      <button><a href="words.html">Words</a></button>
+      <button><a href="forum.html">Forum</a></button>
     </header>
     <main>
-    
+      <p class="geo-letter">ა</p>
+      <br />
+      <br />
+      <button id="first-answer">ბ</button>
+      <button id="second-answer">გ</button>
+      <button id="third-answer">ვ</button>
+      <button id="fourth-answer">დ</button>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer><h6>Copyright ©Wojciech Miczarek</h6></footer>
+  </body>
 </html>
