Created dummy contact page.

--- a/html/alphabet.html
+++ b/html/alphabet.html
@@ -15,6 +15,7 @@
       <button><a href="alphabet.html">Alphabet</a></button>
       <button><a href="words.html">Words</a></button>
       <button><a href="forum.html">Forum</a></button>
+      <button><a href="contact.html">Contact</a></button>
     </header>
     <main>
       <p class="geo-letter">ა</p>
