--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   </head>
   <body>
     <header>
-      <h1>Welcome to Geolingo!</h1>
+      <h1><img src="img/geo_flag.jpg" alt=""> Welcome to Geolingo!</h1>
       <button><a href="index.html">Home</a></button>
       <button><a href="html/alphabet.html">Alphabet</a></button>
       <button><a href="html/words.html">Words</a></button>
       <button><a href="html/forum.html">Forum</a></button>
+      <button><a href="html/contact.html">Contact</a></button>
     </header>
     <main>
       <h2>News</h3>
