--- a/html/words.html
+++ b/html/words.html
@@ -14,6 +14,7 @@
         <button><a href="alphabet.html">Alphabet</a></button>
         <button><a href="words.html">Words</a></button>
         <button><a href="forum.html">Forum</a></button>
+        <button><a href="contact.html">Contact</a></button>
     </header>
     <main>
     
