Added Georgina flag to all subpages and changed font to Roboto.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/template.css" />
     <link rel="stylesheet" href="css/index.css" />
     <meta charset="UTF-8" />
@@ -10,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1><img src="img/geo_flag.jpg" alt=""> Welcome to Geolingo!</h1>
+      <h1><img src="img/geo_flag.jpg" alt="georgian-flag"> Welcome to Geolingo!</h1>
       <button><a href="index.html">Home</a></button>
       <button><a href="html/alphabet.html">Alphabet</a></button>
       <button><a href="html/words.html">Words</a></button>
