--- a/html/alphabet.html
+++ b/html/alphabet.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/template.css" />
-    <link rel="stylesheet" href="../css/alphabet.css" />
+    <link rel="stylesheet" href="../css/alphabet.css" /> 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1>Learn Georgian letters</h1>
+      <h1><img src="../img/geo_flag.jpg" alt="geoggian-flag">Learn Georgian letters</h1>
       <button><a href="../index.html">Home</a></button>
       <button><a href="alphabet.html">Alphabet</a></button>
       <button><a href="words.html">Words</a></button>
