--- a/html/words.html
+++ b/html/words.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../css/template.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Learn new words</h1>
+        <h1><img src="../img/geo_flag.jpg" alt="geoggian-flag">Learn new words</h1>
         <button><a href="../index.html">Home</a></button>
         <button><a href="alphabet.html">Alphabet</a></button>
         <button><a href="words.html">Words</a></button>
